# magically-dead

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  magic.sublime-workspace  readme.md
schemas/: create_lobby.js  games.sql  join_lobby.js  kill_player.js  leave_lobby.js  players.sql  vote_player.js
src/: lib.rs  main.rs  request_types.rs  response_types.rs
