[package]
name = "magic"
version = "0.1.0"
authors = ["A5rocks <git@helvetica.moe>"]
description = "A social game made using Discord's slash commands."
repository = "http://cyberspace:4567/helvetica/magic"
license = "MPL-2.0"
readme = "readme.md"
edition = "2018"
keywords = ["magic", "game", "mystery"]
categories = ["games", ""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
ring = "0.16.19"
hex = "0.4.2"
