[package]
name = "magic"
version = "0.1.0"
authors = ["A5rocks <git@helvetica.moe>"]
description = "A social game made using Discord's slash commands."
repository = "http://cyberspace:4567/helvetica/magic"
license = "MPL-2.0"
readme = "readme.md"
edition = "2018"
keywords = ["magic", "game", "mystery"]
categories = ["games", ""]

[[bin]]
name = "magic"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
tokio = { version = "1", features = ["net", "signal", "macros", "rt-multi-thread"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
ring = "0.16.19"
hex = "0.4.2"
sqlx = { version = "0.4.2", features = [ "runtime-tokio-rustls", "postgres" ] }
dotenv_codegen = "0.15.0"
tokio-compat-02 = "0.2"
lazy_static = "1.4.0"
